<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <EditText
      android:id="@+id/editTextPass"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/editTextNick"
      app:layout_constraintStart_toStartOf="@+id/editTextNick"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextNick"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.4" />

  <Button
      android:id="@+id/registerButton"
      android:layout_width="174dp"
      android:layout_height="46dp"
      android:text="@string/register"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/editTextNick"
      app:layout_constraintStart_toStartOf="@+id/editTextNick"
      app:layout_constraintTop_toBottomOf="@+id/editTextPass"
      app:layout_constraintVertical_bias="0.1" />

  <Button
      android:id="@+id/loginButton"
      android:layout_width="174dp"
      android:layout_height="46dp"
      android:text="@string/login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/editTextNick"
      app:layout_constraintStart_toStartOf="@+id/editTextNick"
      app:layout_constraintTop_toBottomOf="@+id/editTextPass"
      app:layout_constraintVertical_bias="0.1" />

  <TextView
      android:id="@+id/log_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/log_in_text"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/editTextNick"
      app:layout_constraintStart_toStartOf="@+id/editTextNick"
      app:layout_constraintTop_toBottomOf="@+id/registerButton"
      app:layout_constraintVertical_bias="0.15" />

  <TextView
      android:id="@+id/reg_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/reg_here_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/editTextPass"
      app:layout_constraintHorizontal_bias="0.516"
      app:layout_constraintStart_toStartOf="@+id/editTextPass"
      app:layout_constraintTop_toBottomOf="@+id/registerButton"
      app:layout_constraintVertical_bias="0.15" />

  <TextView
      android:id="@+id/textYourNick"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/your_nick"
      app:layout_constraintBottom_toTopOf="@+id/editTextNick"
      app:layout_constraintStart_toStartOf="@+id/editTextNick" />

  <TextView
      android:id="@+id/textYourPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/your_password"
      app:layout_constraintBottom_toTopOf="@+id/editTextPass"
      app:layout_constraintStart_toStartOf="@+id/editTextPass" />

  <ImageView
      android:id="@+id/imgLogin"
      android:layout_width="132dp"
      android:layout_height="142dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextNick"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo2"
      android:contentDescription="@string/wg_logo" />

  <Button
      android:id="@+id/butRecords"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/butRecords"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registerButton" />
</androidx.constraintlayout.widget.ConstraintLayout>