<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/guessLabel"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/make_a_guess"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/pointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guessLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/shotsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shots"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guessLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/pointsAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guessLabel"
        app:layout_constraintEnd_toEndOf="@+id/pointsLabel"
        app:layout_constraintStart_toStartOf="@+id/pointsLabel"
        app:layout_constraintTop_toBottomOf="@+id/pointsLabel" />

    <TextView
        android:id="@+id/shotsAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_marginBottom="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guessLabel"
        app:layout_constraintEnd_toEndOf="@+id/shotsLabel"
        app:layout_constraintStart_toStartOf="@+id/shotsLabel"
        app:layout_constraintTop_toBottomOf="@+id/shotsLabel"/>

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="186dp"
        android:layout_height="52dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guessLabel"
        app:layout_constraintStart_toStartOf="@+id/guessLabel"
        app:layout_constraintTop_toBottomOf="@+id/guessLabel"
        app:layout_constraintVertical_bias="0.08"/>

    <Button
        android:id="@+id/guessButton"
        android:layout_width="180dp"
        android:layout_height="126dp"
        android:layout_margin="10dp"
        android:text="@string/guess"
        android:textSize="27sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="140dp"
        android:layout_height="86dp"
        android:layout_margin="10dp"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/butScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        app:layout_constraintBottom_toBottomOf="@+id/guessLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>